--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns = "http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html">
 
@@ -9,44 +9,46 @@
     <title>ЛР №3</title>
 </h:head>
 <h:body>
-<h:outputStylesheet library="css" name="style.css"  />
-<table>
-    <tr>
-        <td id="header" colspan="3">
-        <p id="name">
-            Лабораторная работа №3<br/>
-            Группа P3201, Вариант 18151<br/>
-            Котелевский Павел Георгиевич<br/>
-            Гостев Михаил Владимирович
-        </p>
-        </td>
-    </tr>
-    <tr id="content">
-    <td id="left-content-column">
-    <table class="inner">
+    <h:outputStylesheet library="css" name="style.css"/>
+    <table>
         <tr>
-            <th>X</th>
-            <th>Y</th>
-            <th>R</th>
-            <th>Result</th>
+            <td id="header" colspan="3">
+                <p id="name">
+                    Лабораторная работа №3<br/>
+                    Группа P3201, Вариант 18151<br/>
+                    Котелевский Павел Георгиевич<br/>
+                    Гостев Михаил Владимирович
+                </p>
+            </td>
         </tr>
-        <!-- todo: history table -->
-    </table>
-    </td>
-    <td id="middle-content-column">
-        Здесь будет форма
-        <!-- todo: form -->
-    </td>
-    <td id="right-content-column">
-        <p>Приложение определяет, входят ли указанные пользователем точки в заданную
-            область.</p>
+        <tr id="content">
+            <td id="left-content-column">
+                <table class="inner">
+                    <tr>
+                        <th>X</th>
+                        <th>Y</th>
+                        <th>R</th>
+                        <th>Result</th>
+                    </tr>
+                    <!-- todo: history table -->
+                </table>
+            </td>
+            <td id="middle-content-column">
+                <h:selectOneMenu value = "#{areaCheck.selectedX}">
+                    <f:selectItems value="#{areaCheck.xOptions}"/>
+                </h:selectOneMenu>
+                <!-- todo: form -->
+            </td>
+            <td id="right-content-column">
+                <p>Приложение определяет, входят ли указанные пользователем точки в заданную
+                    область.</p>
 
-        <!-- todo: diagram -->
-    </td>
-    </tr>
-    <tr>
-        <td id="footer" colspan="3"><p id="footer-text">&copy; Университет ИТМО 2018</p></td>
-    </tr>
-</table>
+                <!-- todo: diagram -->
+            </td>
+        </tr>
+        <tr>
+            <td id="footer" colspan="3"><p id="footer-text">&copy; Университет ИТМО 2018</p></td>
+        </tr>
+    </table>
 </h:body>
 </html>
