--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -69,7 +69,7 @@
                             <f:selectItems value="#{areaCheck.rOptions}"/>
                         </h:selectOneMenu>
                     </fieldset>
-                    <h:commandButton styleClass="input-class" value="Отправить"/>
+                    <img src="https://imgur.com/WUhMfE6" onmousedown="onFormSubmit()" alt="Отправить"/>
                 </h:form>
                 <div id="errors"></div>
 
