--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -3,6 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:b="http://bootsfaces.net/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
@@ -26,27 +27,23 @@
         </tr>
         <tr id="content">
             <td id="left-content-column">
-                <h:dataTable value="#{requestsData.requests}"
+                <p:dataTable value="#{requestsData.requests}"
                              var="req"
                              id="history"
                              styleClass="inner">
-                    <h:column>
-                        <f:facet name="header"> X </f:facet>
-                        ${req.x}
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header"> Y </f:facet>
-                        ${req.y}
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header"> R </f:facet>
-                        ${req.r}
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header"> RESULT </f:facet>
-                        ${req.result}
-                    </h:column>
-                </h:dataTable>
+                    <p:column headerText="X">
+                        <h:outputText value="${req.x}"/>
+                    </p:column>
+                    <p:column headerText="Y">
+                        <h:outputText value="${req.y}"/>
+                    </p:column>
+                    <p:column headerText="R">
+                        <h:outputText value="${req.r}"/>
+                    </p:column>
+                    <p:column headerText="RESULT">
+                        <h:outputText value="${req.result}"/>
+                    </p:column>
+                </p:dataTable>
             </td>
             <td id="middle-content-column">
                 <h:form id="data-form">
@@ -68,7 +65,8 @@
                             <f:selectItems value="#{areaCheck.rOptions}"/>
                         </h:selectOneMenu>
                     </fieldset>
-                    <img src="https://imgur.com/WUhMfE6" onmousedown="onFormSubmit()" alt="Отправить"/>
+                    <img src="https://imgur.com/WUhMfE6" onmousedown="onFormSubmit()"
+                         alt="Отправить"/>
                 </h:form>
                 <div id="errors"></div>
 
@@ -95,10 +93,10 @@
                 <p>Приложение определяет, входят ли указанные пользователем точки в заданную
                     область.</p>
                 <div id="canvas-div" onmousedown="onCanvasClick(event)" width="300" height="300">
-                <canvas id="canvas"
-                          style="background-color:#ffffff;
+                    <b:canvas id="canvas"
+                              style="background-color:#ffffff;
                           border-radius: 20px;"
-                          width="300" height="300"/>
+                              width="300" height="300"/>
                 </div>
             </td>
         </tr>
@@ -106,7 +104,7 @@
             <td id="footer" colspan="3">
                 <h:form>
                     <h:commandButton value="Стартовая страница"
-                              action="#{navigationController.showPage()}">
+                                     action="#{navigationController.showPage()}">
                         <f:param name="pageId" value="2"/>
                     </h:commandButton>
                 </h:form>
