Created test page for debugging

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -40,7 +40,7 @@
                         ${req.y}
                     </h:column>
                     <h:column>
-                        <f:facet name = "header">Y</f:facet>
+                        <f:facet name = "header">R</f:facet>
                         ${req.r}
                     </h:column>
                     <h:column>
