Fixed test page for debugging

--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -11,6 +11,8 @@
 </head>
 <body>
 <h:form id="data-form">
+  <h:outputScript library="js" name="canvas.js"/>
+  <h:outputScript library="js" name="events_handlers.js"/>
   <fieldset>
     <legend>Значение X</legend>
     <h:selectOneMenu styleClass="input-class" value="#{areaCheck.currentXValue}"
