--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -27,27 +27,23 @@
         </tr>
         <tr id="content">
             <td id="left-content-column">
-                <h:dataTable value="#{requestsData.requests}"
+                <p:dataTable value="#{requestsData.requests}"
                              var="req"
                              id="history"
                              styleClass="inner">
-                    <h:column>
-                        <f:facet name = "header">X</f:facet>
-                        ${req.x}
-                    </h:column>
-                    <h:column>
-                        <f:facet name = "header">Y</f:facet>
-                        ${req.y}
-                    </h:column>
-                    <h:column>
-                        <f:facet name = "header">R</f:facet>
-                        ${req.r}
-                    </h:column>
-                    <h:column>
-                        <f:facet name = "header">RESULT</f:facet>
-                        ${req.result}
-                    </h:column>
-                </h:dataTable>
+                    <p:column headerText="X">
+                        <h:outputText value="#{req.x}" />
+                    </p:column>
+                    <p:column headerText="Y">
+                        <h:outputText value="#{req.y}" />
+                    </p:column>
+                    <p:column headerText="R">
+                        <h:outputText value="#{req.r}" />
+                    </p:column>
+                    <p:column headerText="RESULT">
+                        <h:outputText value="#{req.result}" />
+                    </p:column>
+                </p:dataTable>
             </td>
             <td id="middle-content-column">
                 <h:form id="data-form">
@@ -80,8 +76,9 @@
                     <h:inputHidden value="#{areaCheck.hiddenRValue}" id="hidden-r"/>
                     <h:inputHidden value="#{areaCheck.hiddenResultValue}" id="result"/>
                     <p:remoteCommand name="validateGraph" update="result"
+                                     oncomplete="writeDB();"
                                      action="#{areaCheck.validateFromGraph()}"
-                                     oncomplete="drawPoint()"/>
+                                     />
                 </h:form>
 
                 <h:form id="db-inputs">
@@ -89,7 +86,9 @@
                     <h:inputHidden value="#{requestsData.y}" id="db-y"/>
                     <h:inputHidden value="#{requestsData.r}" id="db-r"/>
                     <h:inputHidden value="#{requestsData.result}" id="db-result"/>
-                    <p:remoteCommand name="writeDB" update="@(#history)"
+                    <h:inputHidden value="#{requestsData.size}" id="db-size"/>
+                    <p:remoteCommand name="save"
+                                     update="db-size"
                                      action="#{requestsData.addRequest()}"/>
                 </h:form>
             </td>
